name:                dexterio
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable dexterio
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
